test/libsolidity/syntaxTests/storageLayoutSpecifier/abstract_contract.sol
abstract contract C layout at 42 { }
// ----
// TypeError 7587: (20-32): Storage layout cannot be specified for abstract contracts.
